--- a/FakeSearchView/gradle.properties
+++ b/FakeSearchView/gradle.properties
@@ -1,4 +1,4 @@
-VERSION_NAME = 0.4-SNAPSHOT
+VERSION_NAME = 0.3.1
 
 GROUP = com.github.leonardoxh
 POM_DESCRIPTION = A custom SearchView for android
